[gd_scene load_steps=4 format=3]

[ext_resource type="PackedScene" path="res://scenes/arena/Arena.tscn" id="1_arena"]
[ext_resource type="Script" path="res://scenes/match/Match.gd" id="2_match"]
[ext_resource type="Script" path="res://camera/GameCamera.gd" id="4_gamecam"]

[node name="Match" type="Node"]
script = ExtResource("2_match")

[node name="Arena" parent="." instance=ExtResource("1_arena")]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_gamecam")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="BackToGallery" type="Button" parent="HUD"]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 152.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
custom_minimum_size = Vector2(140, 36)
z_index = 200
mouse_filter = 0
text = "< GALLERY"

[node name="SpeakerToggle" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -124.0
offset_top = 14.0
offset_right = -80.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 0
custom_minimum_size = Vector2(44, 44)
z_index = 200
mouse_filter = 0
text = ""

[node name="WhistlePlayer" type="AudioStreamPlayer" parent="HUD"]

[node name="StadiumAmbient" type="AudioStreamPlayer" parent="HUD"]

[node name="HealthBar" type="ProgressBar" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -30.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="GoalLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "GOAL!"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="MatchOverLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Match Over!"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[connection signal="pressed" from="HUD/BackToGallery" to="." method="_on_back_to_gallery_pressed"]
[connection signal="pressed" from="HUD/SpeakerToggle" to="." method="_on_speaker_toggle_pressed"]
